yaml/Product-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-Deployment
  labels:
    app: product-app
    tier: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
        - name: product-service
          image: 344807217216.dkr.ecr.ap-south-1.amazonaws.com/product-service
          ports:
            - name: traffic-port
              containerPort: 8082
          livenessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
