yaml/Order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: order-app
  ports:
    - name: order-traffic-port
      port: 8081
      targetPort: traffic-port
