yaml/Product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: product-app
  ports:
    - name: product-traffic-port
      port: 8081
      targetPort: traffic-port
