yaml/User-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-app
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: user-app
  ports:
    - name: user-traffic-port
      port: 8081
      targetPort: traffic-port
