yaml/Center-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-service
  labels:
    tier: backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
   - host: api.devopssolutions.online
     http:
       paths:
         - path: /api/v1/auth
           pathType: Prefix
           backend:
             service:
               name: user-service
               port:
                 number: 8081
         - path: /api/v1/users
           pathType: Prefix
           backend:
             service:
               name: user-service
               port:
                 number: 8081
         - path: /api/v1/organizations
           pathType: Prefix
           backend:
             service:
               name: user-service
               port:
                 number: 8081
         - path: /api/v1/products
           pathType: Prefix
           backend:
             service:
               name: product-service
               port:
                 number: 8082
         - path: /api/v1/orders
           pathType: Prefix
           backend:
             service:
               name: order-service
               port:
                 number: 8083
